<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutMonday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_sunday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorDoneTask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunday" />

            <TextView
                android:id="@+id/tv_sunday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_sunday_circle" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutTuesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutSunday">

            <TextView
                android:id="@+id/tv_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_monday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorDoneTask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_monday" />

            <TextView
                android:id="@+id/tv_monday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_monday_circle" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutWednesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutMonday">

            <TextView
                android:id="@+id/tv_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terca"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_tuesday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorLateTask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tuesday" />

            <TextView
                android:id="@+id/tv_tuesday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="03/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_tuesday_circle"  />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutThursday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutTuesday">

            <TextView
                android:id="@+id/tv_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quarta"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_wednesday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorNotTaskDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wednesday" />

            <TextView
                android:id="@+id/tv_wednesday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="04/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_wednesday_circle"  />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutFriday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutWednesday">

            <TextView
                android:id="@+id/tv_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quinta"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_thursday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorNotTaskDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thursday" />

            <TextView
                android:id="@+id/tv_thursday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="05/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_thursday_circle"  />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutSaturday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutThursday">

            <TextView
                android:id="@+id/tv_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexta"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_friday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorNotTaskDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_friday" />

            <TextView
                android:id="@+id/tv_friday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="06/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_friday_circle" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutFriday">

            <TextView
                android:id="@+id/tv_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_saturday_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:src="@color/colorNotTaskDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_saturday" />

            <TextView
                android:id="@+id/tv_saturday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="07/02"
                android:textColor="@color/colorText"
                android:textSize="10dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_saturday_circle" />
        </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>